--- a/index4.html
+++ b/index4.html
@@ -24,10 +24,10 @@
           <ul class="navbar-nav mr-auto">
             
             <li class="nav-item active navhover"> 
-              <a class="nav-link" href="#"><b>Road</b></a>
+              <a class="nav-link" href="index2.html"><b>Suspect</b></a>
             </li>
             <li class="nav-item active navhover">
-              <a class="nav-link " href="#"><b>Missing</b></a>
+              <a class="nav-link " href="index3.html"><b>Missing</b></a>
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
